// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`country helpers getConfigByISOName country configs australia 1`] = `
{
  "alpha2Code": "AU",
  "code": 36,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs bangladesh 1`] = `
{
  "alpha2Code": "BD",
  "code": 50,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "bangla",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs canada 1`] = `
{
  "alpha2Code": "CA",
  "code": 124,
  "features": {
    "education": false,
    "events": true,
    "iqamahTimes": true,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "ISNA",
  },
}
`;

exports[`country helpers getConfigByISOName country configs egypt 1`] = `
{
  "alpha2Code": "EG",
  "code": 818,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "Egypt",
  },
}
`;

exports[`country helpers getConfigByISOName country configs france 1`] = `
{
  "alpha2Code": "FR",
  "code": 250,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "union-des-organisations-islamiques-de-france",
  },
}
`;

exports[`country helpers getConfigByISOName country configs india 1`] = `
{
  "alpha2Code": "IN",
  "code": 356,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "hindi",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs new_zealand 1`] = `
{
  "alpha2Code": "NZ",
  "code": 554,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs pakistan 1`] = `
{
  "alpha2Code": "PK",
  "code": 586,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "urdu",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs saudi_arabia 1`] = `
{
  "alpha2Code": "SA",
  "code": 682,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "Makkah",
  },
}
`;

exports[`country helpers getConfigByISOName country configs turkey 1`] = `
{
  "alpha2Code": "TR",
  "code": 792,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "Türkçe",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "turkey-presidency-of-religious-affairs",
  },
}
`;

exports[`country helpers getConfigByISOName country configs turkiye 1`] = `
{
  "alpha2Code": "TR",
  "code": 792,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "Türkçe",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "turkey-presidency-of-religious-affairs",
  },
}
`;

exports[`country helpers getConfigByISOName country configs united_arab_emirates 1`] = `
{
  "alpha2Code": undefined,
  "code": 784,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs united_kingdom 1`] = `
{
  "alpha2Code": "GB",
  "code": 826,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": true,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs united_states 1`] = `
{
  "alpha2Code": "US",
  "code": 840,
  "features": {
    "education": true,
    "events": true,
    "iqamahTimes": true,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "ISNA",
  },
}
`;

exports[`country helpers getConfigByISOName returns default config if country not found 1`] = `
{
  "alpha2Code": undefined,
  "code": null,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getCountryByISOName returns country info if found 1`] = `
{
  "aliases": [
    "America",
    "U.S.",
    "U.S.A.",
  ],
  "alpha2": "US",
  "alpha3": "USA",
  "emoji": "🇺🇸",
  "fifa": "USA",
  "ioc": "USA",
  "iso_name": "United States",
  "numeric": "840",
  "official": "United States of America",
  "short": "United States",
  "shortcode": ":flag-us:",
}
`;

exports[`country helpers getCountryByISOName returns country info if found 2`] = `
{
  "alpha2": "SA",
  "alpha3": "SAU",
  "emoji": "🇸🇦",
  "fifa": "KSA",
  "ioc": "KSA",
  "iso_name": "Saudi Arabia",
  "numeric": "682",
  "official": "Kingdom of Saudi Arabia",
  "short": "Saudi Arabia",
  "shortcode": ":flag-sa:",
}
`;
